# reescrita-das-atividades

./: README.md
exercicio_06/: Cargo.toml
exercicio_06/src/: 01.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  19.rs  20.rs
reescrita_rust/: Cargo.toml
reescrita_rust/src/: ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  readme.md
