[package]
name = "reescrita_rust"
version = "0.1.0"
edition = "2021"

# Aqui você avisa o Cargo que cada arquivo é um executável binário independente:
[[bin]]
name = "ex01"
path = "src/ex01.rs"

[[bin]]
name = "ex02"
path = "src/ex02.rs"

[[bin]]
name = "ex03"
path = "src/ex03.rs"

[[bin]]
name = "ex04"
path = "src/ex04.rs"

[[bin]]
name = "ex05"
path = "src/ex05.rs"

[[bin]]
name = "ex06"
path = "src/ex06.rs"

[[bin]]
name = "ex07"
path = "src/ex07.rs"

[[bin]]
name = "ex08"
path = "src/ex08.rs"

[[bin]]
name = "ex09"
path = "src/ex09.rs"

[[bin]]
name = "ex10"
path = "src/ex10.rs"